# Aetheris

./: .gitignore  README.md  docker-compose.yml
aetheris-agents/: .env.example  main.py  pyproject.toml  seed_transactions.py
aetheris-agents/agent_service/: app.py
aetheris-agents/agent_service/agents/: role_agent.py
aetheris-agents/agent_service/config/: settings.py
aetheris-agents/agent_service/control/: metrics.py  priority_buffer.py
aetheris-agents/agent_service/graph/: orchestrator.py
aetheris-agents/agent_service/models/: schema.py
aetheris-agents/agent_service/tools/: registry.py
aetheris-agents/agent_service/transport/: mqtt_bus.py
aetheris-edge-wasm/: Cargo.toml
aetheris-edge-wasm/src/: lib.rs
aetheris-ingestion/: agent.js  multi-agent.js  package-lock.json  package.json  publish.js  subscribe-wasm.js  subscribe.js
