[project]
name = "aetheris-agents"
version = "0.1.0"
description = "Aetheris LangGraph multi-agent orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.8",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.13.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]

[tool.uv]
package = false
